fix(quick-action-card): hyphen on safari

--- a/express/blocks/quick-action-card/quick-action-card.css
+++ b/express/blocks/quick-action-card/quick-action-card.css
@@ -159,6 +159,7 @@ main .quick-action-card .carousel-platform span {
   text-align: center;
   max-width: 66px;
   hyphens: auto;
+  -webkit-hyphens: auto;
 }
 
 main .quick-action-card .carousel-container::before {
